--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -36,6 +36,11 @@
         <br>1993 - 2006
         <br>1991 Upper Deck 
     </td>
+    <td>
+        Scott Kamieniecki
+        <br>1991 - 2000
+        <br>1992 Topps
+    </td>
 </tr>
 <tr>
     <td width="300">
@@ -44,8 +49,10 @@
     <td>
         <img src="Images/MLB/Steve Karsay.jpeg" width="300">
     </td>
+    <td><img src="Images/MLB/Kamieniecki Scott.jpeg" width="300"></td>
 
 </tr>
+
 </table>
 <h1 id="Ke">Ke</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -128,21 +135,30 @@
            <br>1982 - 1991
            <br>1987 Topps
         </td>
-        <td>
-            Dave Kingman
-            <br>1971 - 1986
-            <br>1987 Topps
-        </td>
 
+        <td colspan="2" align="center">
+            John Kiely
+            <br>1991 - 1993
+            <br>1993 Upper Deck
+        </td>
     </tr>
     <tr>
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/584 Kittle.jpeg">
         </td>
-        <td width="300">
-            <img width="300" src="Images/1987 Topps Autos/709 Kingman.jpeg">
+
         </td>
+        <td colspan="3"><img width="600" src="images/MLB/Kiely John.jpeg"></td>
         </tr>
+    <tr>
+        <td>
+            Dave Kingman
+            <br>1971 - 1986
+            <br>1987 Topps
+        </td>
+    </tr>
+    <tr>        <td width="300">
+        <img width="300" src="Images/1987 Topps Autos/709 Kingman.jpeg"></tr>
     </table>
 <h1 id="Kr">Kr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
