--- a/Baseball/Baseball_L.htm
+++ b/Baseball/Baseball_L.htm
@@ -123,22 +123,40 @@
     </tr>
     <tr>
         <td>
-           Dennis Lamp
-           <br>1977-1992
-           <br>1987 Topps
+            Bill Landrum
+            <br>1986 - 1993
+            <br>1990 Fleer
+            <br>Son of Bill Landrum
         </td>
-        <td>
-            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
-            Don Larson
-            <br>1953-1967
-            <br>2002 Upper Deck<br> World Series Heroes
-        </td>
-        <td>
+        <td colspan="3" align="center">
             <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
             Joe Landrum
             <br>1950 - 1952
             <br>Custom Cut
+            <br>Father of Bill Landrum
         </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Landrum Bill.jpeg"></td>
+
+
+        <td colspan="2">
+            <img width="600" src="Images/MLB/Joe Landrum.jpeg">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Dennis Lamp
+            <br>1977-1992
+            <br>1987 Topps
+         </td>
+         <td>
+             <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+             Don Larson
+             <br>1953-1967
+             <br>2002 Upper Deck<br> World Series Heroes
+         </td>
+
     </tr>
     <tr>
         <td>
@@ -146,9 +164,6 @@
         </td>
         <td>
             <img width="300" src="Images/MLB/Don Larson.jpeg">
-        </td>
-        <td>
-            <img width="300" src="Images/MLB/Joe Landrum.jpeg">
         </td>
     </tr>
 </table>
@@ -166,7 +181,11 @@
             <br>1983 - 1994
             <br>1987 Topps
         </td>
-
+        <td>
+            Terry Leach
+            <br>1981 - 1993
+            <br>1992 Upper Deck
+        </td>
     </tr>
     <tr>
         <td width="300">
@@ -175,7 +194,18 @@
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/501 Lefferts.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Leach Terry.jpeg"></td>
 
+    </tr>
+    <tr>
+        <td>
+            José Leclerc
+            <br>2016 - Present
+            <br>2019 Topps
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Leclerc Jose.jpeg"></td>
     </tr>
     </table>
 <h1 id="Li">Li</h1>
@@ -235,6 +265,11 @@
                 <br>1987 Topps Checklist
         
             </td>
+            <td>
+                Larry Luebbers
+                <br>1993, 1999-2000
+                <br>1994 Topps
+            </td>
     
         </tr>
         <tr>
@@ -244,6 +279,7 @@
             <td width="300">
                 <img width="300" src="Images/1987 Topps Autos/792 Frank Lucchesi.jpeg">
             </td>
+            <td><img width="300" src="Images/MLB/Luebbers Larry.jpeg"></td>
 
         </tr>
 
