--- a/Baseball/Baseball_N.htm
+++ b/Baseball/Baseball_N.htm
@@ -23,6 +23,32 @@
  <pre>
     <a href="#Ne">Ne</a> <a href="#Ni">Ni</a> <a href="#No">No</a>
  </pre>
+ <h1 id="Na">Na</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+<tr>
+    <td colspan="2">
+        Jaime Navarro
+        <br>1989 - 2000
+        <br>1993 Stadium Club
+        <br>Son of Julio Navarro
+    </td>
+    <td colspan=2>
+        <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+        Julio Navarro
+        <br>1962 - 1970
+        <br>1960 Topps
+        <br>Father of Jaime Navarro
+    </td>
+</tr>
+<tr>
+    <td colspan="2">
+        <img width="500" src="Images/MLB/Navarro Jaime.jpeg">
+    </td>
+    <td colspan="2"><img width=500 src="Images/MLB/Navarro Julio.jpeg"></td>
+</tr>
+
+</table>
+
  <h1 id="Ne">Ne</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
