--- a/Baseball/Baseball_O.htm
+++ b/Baseball/Baseball_O.htm
@@ -96,6 +96,22 @@
         </td>
         </tr>
 </table>
+<h1 id="Ot">Ot</h1>
+
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Adam Ottavino
+            <br>2010 - Present
+            <br>2020 Allen and Ginter
+        </td>
+    </tr>
+    <tr>
+        <td width="300">
+            <img width="300" src="Images/MLB/Ottavino Adam.jpeg">
+        </td>
+        </tr>
+</table>
 <h1 id="Ow">Ow</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
