--- a/Baseball/Baseball_R.htm
+++ b/Baseball/Baseball_R.htm
@@ -137,6 +137,21 @@
         </td>
 
     </tr>
+    <tr>
+        <td colspan="2" align="center">
+            Frank Riccelli
+            <br>1976-1979
+            <br>1974 Topps | Signed Index Card
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <img width="300" src="Images/MLB/Diorio Freisleben Riccelli Shanahan.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Riccelli Frank.jpeg">
+        </td>
+    </tr>
     </table>
 <h1 id="Ro">Ro</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -243,6 +258,11 @@
                 <br>1977 - 1986
                 <br>1982 Topps
             </td>
+            <td>
+                Grayson Rodriguez
+                <br>2023 - Present
+                <br>2020 Bowman Platinum
+            </td>
         </tr>
         <tr>
             <td>
@@ -251,6 +271,17 @@
             <td>
                 <img width="300" src="Images/MLB/Dave Rozema.jpeg">
             </td>
+            <td><img width="300" src="Images/MLB/Rodriguez Grayson.jpeg"></td>
+        </tr>
+        <tr>
+            <td>
+                Sal Romano
+                <br>2017 - 2021
+                <br>2019 Topps
+            </td>
+        </tr>
+        <tr>
+            <td><img width="300" src="Images/MLB/Romano Sal.jpeg"></td>
         </tr>
     </table>
 <h1 id="Ru">Ru</h1>
@@ -263,20 +294,31 @@
             <br>1987 Topps Cut to hold
             <br>Auto on paper
         </td>
-        <td>
+        <td colspan="2" align="center">
             Scott Ruskin
             <br>1991 - 1993
-            <br>1992 Upper Deck
+            <br>1992 Upper Deck | 1991 Donruss
         </td>
 
     </tr>
     <tr>
-        <td width="300">
+        <td>
             <img width="300" src="Images/1987 Topps Autos/221 Ruhle.jpeg">
         </td>
         <td>
             <img width="300" src="Images/MLB/Scott Ruskin.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Ruskin Scott.jpeg"></td>
+    </tr>
+    <tr>
+        <td colspan="2" align="center">
+            Scott Ruffcorn
+            <br>1993 - 1997
+            <br>1994 Collector's Choice
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2"><img width="600" src="Images/MLB/Ruffcorn Scott.jpeg">   </td>
     </tr>
 </table>
 
