--- a/Baseball/Baseball_S.htm
+++ b/Baseball/Baseball_S.htm
@@ -201,6 +201,16 @@
                 <img width="300" src="Images/MLB/Tim Scott.jpeg">
             </td>
         </tr>
+        <tr>
+            <td>
+                Bob Scanlan
+                <br>1991 - 2001
+                <br>1993 Upper Deck
+            </td>
+        </tr>
+        <tr>
+            <td><img width="300" src="Images/MLB/Scanlan Bob.jpeg"></td>
+        </tr>
 </table>
 <h1 id="Se">Se</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -215,6 +225,11 @@
             <br>1981 - 1990
             <br>1987 Topps
         </td>
+        <td>
+            Frank Seminara
+            <br>1992 - 1994
+            <br>1993 Topps
+        </td>
 
     </tr>
     <tr>
@@ -224,6 +239,7 @@
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/149 Searage.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Seminara Frank.jpeg"> </td>
 
     </tr>
 </table>
@@ -258,6 +274,22 @@
             <img width="300" src="Images/1987 Topps Autos/730 Show.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Jeff Shaw
+            <br>1990 - 2001
+            <br>1999 Stadium Club
+        </td>
+        <td>
+            Steve Shields
+            <br>1985 - 1989
+            <br>1988 Score
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Shaw Jeff.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Shields Steve.jpeg"></td>
+    </tr>
 </table>
 <h1 id="Si">Si</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -267,11 +299,18 @@
             <br>1982 - 1991
             <br>1987 Topps
         </td>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Curt Simmons
+            <br>1947 - 1967
+            <br>1967 Topps
+        </td>
     </tr>
     <tr>
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/404 Sisk.jpeg"> 
         </td>
+        <td><img width="300" src="Images/MLB/Simmons Curt.jpeg"></td>
     </tr>
 </table>
 <h1 id="Sk">Sk</h1>
@@ -332,6 +371,11 @@
             <br>1984 - 1991
             <br>1991 Topps
         </td>
+        <TD>
+            Greg Shanahan
+            <br>1973-1974
+            <br>1974 Topps
+        </TD>
     </tr>
     <tr>
         <td width="300">
@@ -339,6 +383,9 @@
         </td>
         <td>
             <img width="300" src="Images/MLB/Roy Smith.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Diorio Freisleben Riccelli Shanahan.jpeg">
         </td>
         </tr>
     </table>
@@ -413,11 +460,18 @@
             <br>1998 - 2009
             <br>2004 Topps Total - Silver 
         </td>
+        <td>
+            Russ Springer
+            <br>1992 - 2010
+            <br>1994 Topps
+        </td>
     </tr>
+
     <tr>
         <td>
             <img width="300" src="Images/MLB/Justin Speier.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Springer Russ.jpeg"></td>
     </tr>
 </table>
 <h1 id="St">St</h1>
@@ -489,6 +543,11 @@
             <br>2016 - 
             <br>2026 Topps Holiday
         </td>
+        <td>
+            Jackson Stephens
+            <br>2017 - Present
+            <br>2018 Topps
+        </td>
     </tr>
     <tr>
         <td>
@@ -497,6 +556,7 @@
         <td>
             <img width="300" src="Images/MLB/Ross Stripling.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Stephens Jackson.jpeg"></td>
     </tr>
 </table>
 <h1 id="Su">Su</h1>
