--- a/Baseball/Baseball_T.htm
+++ b/Baseball/Baseball_T.htm
@@ -31,11 +31,29 @@
         <br>1973 - 1993
         <br>1987 Topps
     </td>
+    <td colspan="2" align="center">
+        Kevin Tapani
+        <br>1989 - 2001
+        <br>1994 Ultra | 1990 Donruss
+    </td>
 </tr>
 <tr>
     <td width="300">
         <img width="300" src="Images/1987 Topps Autos/726 Tanana.jpeg">
     </td>
+    <td><img width="300" src="Images/MLB/Tapani Kevin 1.jpeg"></td>
+    <td><img width="300" src="Images/MLB/Tapani Kevin 2.jpeg"></td>
+</tr>
+<tr>
+    <td colspan="2" align="center">
+        Kevin Tapani
+        <br>1989 - 2001
+        <br>1994 Topps | 2002 Topps
+    </td>
+</tr>
+<tr>
+    <td><img width="300" src="Images/MLB/Tapani Kevin 3.jpeg"></td>
+    <td><img width="300" src="Images/MLB/Tapani Kevin.jpeg"></td>
 </tr>
 </table>
 <h1 id="Te">Te</h1>
@@ -197,7 +215,39 @@
             <img width="300" src="Images/1987 Topps Traded/Tom Trebelhorn.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Steve Trachsel
+            <br>1993 - 2008
+            <br>1997 Collector's Choice
+        </td>
+        <td>
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Virgil Trucks
+            <br>1941 - 1958
+            <br>Diamond Signatures
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Trachsel Steve.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Trucks Virgil.jpeg"></td>
+    </tr>
     </table>
+    <h1 id="Ts">Ts</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            George Tsamis
+            <br>1993
+            <br>1994 Topps
+        </td>
+    </tr>
+    <tr>
+        <td width="300">
+            <img width="300" src="Images/MLB/Tsamis George.jpeg">
+        </td>
+    </tr>
+</table>
 <h1 id="Tu">Tu</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
     <tr>
