--- a/Baseball/Baseball_W.htm
+++ b/Baseball/Baseball_W.htm
@@ -65,6 +65,11 @@
         <br>1988 - 1996
         <br>1991 Donruss
     </td>
+    <td>
+        Jeff Ware
+        <br>1995 - 1996
+        <br>1996 Pinnacle
+    </td>
 </tr>
 <tr>
     <td>
@@ -73,6 +78,7 @@
     <td>
         <img width="300" src="Images/MLB/Mike Walker.jpeg">
     </td>
+    <td><img width="300" src="Images/MLB/Ware Jeff.jpeg"></td>
 </tr>
 </table>
 <h1 id="We">We</h1>
@@ -96,27 +102,43 @@
         </td>
     </tr>
     <tr>
-        <td width="300">
+        <td>
             <img width="300" src="Images/1987 Topps Autos/179 Wegman.jpeg">
         </td>
-        <td width="300">
+        <td>
             <img width="300" src="Images/1987 Topps Autos/328 Welch.jpeg">
         </td>
-        <td width="300">
+        <td>
             <img width="300" src="Images/1987 Topps Autos/592 Welsh.jpeg">
         </td>
     </tr>
     <tr>
-        <td colspan="2" align="center"> <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+        <td colspan="2"> <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
             Mike Wegener
             <br>1969 - 1970
             <br>1969 Topps
+        </td>
+        <td>
+            Turk Wendell
+            <br>1993 - 2004
+            <br>1992 Topps
         </td>
     </tr>
     <tr>
         <td colspan="2">
             <img width="600" src="Images/MLB/Mike Wegener.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Wendell Turk.jpeg"></td>
+    </tr>
+    <tr>
+        <td>
+            Brian West
+            <br>Minor League
+            <br>2002 Bowman's Best
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/West Brian.jpeg"></td>
     </tr>
     </table>
 <h1 id="Wh">Wh</h1>
@@ -181,6 +203,9 @@
             <br>1987 Topps 
         </td>
         <td>
+            Trevor Williams
+            <br>2016 - Present
+            <br>2019 Topps
         </td>
     </tr>
     <tr>
@@ -190,7 +215,7 @@
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/786 Williams.jpeg">
         </td>
-        <td width="300">
+        <td width="300"><img width="300" src="Images/MLB/Williams Trevor.jpeg">
     
         </td>
         </tr>
