--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -231,7 +231,7 @@
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/577 Bilardello.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/394 Bielecki.jpeg" width="300"> </td>
-    <td width="300"><img src="Images/mlb/Bielecki Mike.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/MLB/Bielecki Mike.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
