--- a/Baseball/Baseball_A.htm
+++ b/Baseball/Baseball_A.htm
@@ -243,7 +243,19 @@
     <td width="300"><img src="Images/1987 Topps Autos/052 Atherton.jpeg" width="300"> </td>
     <td><img width="300" src="Images/Negro Leagues/Luke Atkinson.jpeg"> </td>
     </tr>
-    
+    </table>
+    <h1 id="Av">Av</h1>
+    <table align="center" border="1" cellpadding="5" cellspacing="5">
+        <tr>
+            <td>
+                Steve Avery
+                <br>1990-1999, 2003
+                <br>1993 Upper Deck
+            </td>
+        </tr>
+        <tr>
+            <td><img width="300" src="Images/MLB/Avery Steve.jpeg"></td>
+        </tr>
     </table>
 </body>
 </html>
