--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -231,7 +231,7 @@
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/577 Bilardello.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/394 Bielecki.jpeg" width="300"> </td>
-    <td width="300"><img src="Images/MLB/Bielecki Mike.jpeg" width="300"> </td>
+    <td width="300"><img src="Images/mlb/Bielecki Mike.jpeg" width="300"> </td>
     </tr>
     <tr>
         <td>
@@ -263,16 +263,17 @@
 
     </tr>
     <tr>
-        <td>
+        <td colspan="2" align="center">
             Tim Birtsas
             <br>1985 - 1990
-            <br>1989 Topps
+            <br>1989 Topps | 1991 Topps
         </td>
     </tr>
     <tr>
         <td>
             <img src="Images/MLB/Birtsas Tim.jpeg" width="300">
         </td>
+        <td><img width="300" src="Images/MLB/Birtsas Tim 1.jpeg"></td>
     </tr>
     </table>
 <h1>Bl</h1>
@@ -300,6 +301,16 @@
     <td width="300"><img src="Images/1987 Topps Autos/669 Black.jpeg" width="300"> </td>
     <td width="300"><img src="Images/1987 Topps Autos/025 Blyleven.jpeg" width="300"> </td>
     <td width="300"><img width="300" src="Images/MLB/Blank Matt.jpeg"></td>
+    </tr>
+    <tr>
+        <td>
+            Mike Blais
+            <br>Minor Leagues
+            <br>1994 Best
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Blais Mike.jpeg"></td>
     </tr>
     </table>
 <h1>Bo</h1>
