--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -92,13 +92,15 @@
         <br>1984 Topps
     </td>
     <td>
-        <br>
-        <br>
+        Floyd Chiffer
+        <br>1982 - 1984
+        <br>1983 Fleer
     </td>
     </tr>
     <tr>
     <td width="300"><img src="Images/1987 Topps Autos/777 Chambliss.jpeg" width="300"> </td>
     <td width="300"><img src="Images/MLB/Larry Christenson.jpeg" width="300"> </td>
+    <td><img src="Images/MLB/Chiffer Floyd.jpeg" width="300"></td>
   
 
     </tr>
@@ -197,10 +199,18 @@
             <br>1997 - 2018
             <br>Custom
         </td>
+        <td>
+            Reid Cornelius
+            <br>1995, 1999 - 2000
+            <br>1992 Best
+        </td>
     </tr>
     <tr>
         <td colspan="2">
             <img width="600" src="Images/MLB/Colon Bartolo.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Cornellius Reid.jpeg">
         </td>
     </tr>
     </table>
