--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -160,6 +160,13 @@
             <img width="300" src="Images/MLB/Mark Dewey.jpeg">
         </td>
     </tr>
+    <tr>
+        <td colspan="300" align="center">Manny Delcarmen<br>2005 - 2010<br>	2005 Just Stars | 	2005 Just Autographs</td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Delcarmen Manny 1.jpeg"></td>
+        <td colspan="2"><img width="600" src="Images/MLB/Delcarmen Manny 2.jpeg"></td>
+    </tr>
     </table>
 <h1 id="Id">Di</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -271,6 +278,11 @@
             <br>1994 - 2004
             <br>1999 Stadium Club
         </td>
+        <td>
+            Brian Drahman
+            <br>1991 - 1994
+            <br>1992 Topps
+        </td>
     </tr>
     <tr>
         <td>
@@ -279,6 +291,7 @@
         <td>
             <img width="300" src="Images/MLB/Dreifort Darren.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Drahman Brian.jpeg"></td>
     </tr>
     </table>
 <h1 id="Du">Du</h1>
