--- a/Baseball/Baseball_F.htm
+++ b/Baseball/Baseball_F.htm
@@ -141,13 +141,15 @@
             <td colspan="3" align="center">
                 Tony Fossas
                 <br>1988 - 1999
-                <br>1994 Topps
+                <br>1993 Donruss | 1994 Topps | 1997 Pacific Prism Invincible
             </td>
         </tr>
         <tr>
-            <td colspan="3" align="center">
+            <td><img width="300" src="Images/MLB/Fossas Tony 1.jpeg"></td>
+            <td>
             <img width="300" src="Images/MLB/Tony Fossas.jpeg">
             </td>
+            <td><img width="300" src="Images/MLB/Fossas Tony 2.jpeg"></td>
         </tr>
         <tr>
             <td>
