--- a/Baseball/Baseball_H.htm
+++ b/Baseball/Baseball_H.htm
@@ -105,9 +105,15 @@
         <br>1988 - 1995
         <br>1989 Fleer
     </td>
+    <td>
+        Mike Hampton
+        <br>1993 - 2010
+        <br>2000 Fleer Mystique
+    </td>
 </tr>
 <tr>
     <td><img width="300" src="Images/MLB/Harris Greg.jpeg"></td>
+    <td><img width="300" src="Images/MLB/Hampton Mike.jpeg"></td>
 </tr>
 </table>
 <h1 id="He">He</h1>
