--- a/Baseball/Baseball_G.htm
+++ b/Baseball/Baseball_G.htm
@@ -96,6 +96,22 @@
         </td>
     </tr>
     </table>
+    <h1>Gl</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Ed Glynn
+            <br>1975 - 1985
+            <br>1983 Donruss
+        </td>
+
+    </tr>
+    <tr>
+        <td width="300">
+            <img src="Images/MLB/Glynn Ed.jpeg" width="300">
+        </td>
+    </tr>
+    </table>
 <h1>Go</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
@@ -121,6 +137,17 @@
     <td width="300">
         <img src="Images/1987 Topps Autos/380 Gossage.jpeg" width="300">
     </td>
+</tr>
+<tr>
+    <td colspan="3" align="center">
+        Pat Gomez
+        <br>1993 - 1995
+        <br>Custom Card | 1994 Fleer
+    </td>
+</tr>
+<tr>
+    <td><img width="300" src="Images/MLB/Gomez Pat 1.jpeg"></td>
+    <td colspan="2"><img width="600" src="Images/MLB/Gomez Pat 2.jpeg"></td>
 </tr>
 </table>
 <h1>Gr</h1>
