--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -54,7 +54,31 @@
             <img width="300" src="Images/MLB/Jackson Edwin.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Kevin Jarvis
+            <br>1994 - 2006
+            <br>2002 Upper Deck 40-Man
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Jarvis Kevin.jpeg"></td>
+    </tr>
  </table>
+ <h1 id="Je">Je</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+
+    <tr>
+        <td>
+            Kevin Jepsen
+            <br>2008 - 2018
+            <br>2009 Upper Deck Icons
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Jepsen Kevin.jpeg"></td>
+    </tr>
+</table>
  <h1 id="Jo">Jo</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
@@ -98,6 +122,10 @@
         <br>1987 Topps Traded
     </td>
     <td>
+        Todd Jones
+        <br>1993 - 2008
+        <br>1999 Stadium Club
+    
     </td>
 </tr>
 <tr>
@@ -107,7 +135,7 @@
     <td width="300">
         <img width="300" src="Images/1987 Topps Traded/Joe Johnson.jpeg">
     </td>
-    <td width="300">
+    <td width="300"><img width="300" src="Images/MLB/Jones Todd.jpeg">
     </td>
     </tr>
 </table>
