--- a/Baseball/Baseball_E.htm
+++ b/Baseball/Baseball_E.htm
@@ -23,6 +23,33 @@
  <pre>
     <a href="#Ei">Ei</a> <a href="#Er">Er</a> <a href="#Ev">Ev</a>
  </pre>
+ <h1 id="Ea">Ea</h1>
+ <table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Gary Eave
+            <br>1988-1990
+            <br>1990 Donruss
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Eave Gary.jpeg"></td>
+    </tr>
+</table>
+<h1 id="Ed">Ed</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+<tr>
+<td colspan="2" align="center">
+    Wayne Edwards
+    <br>1989 - 1991
+    <br>1990 Fleer
+</td>
+
+</tr>
+<tr>
+<td colspan="2"><img src="Images/MLB/Kinzer Edwards.jpeg" width="600"> </td>
+</tr>
+</table>
 <h1 id="Ei">Ei</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
