--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -53,6 +53,7 @@
 
 </tr>
 
+
 </table>
 <h1 id="Ke">Ke</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -156,9 +157,16 @@
             <br>1971 - 1986
             <br>1987 Topps
         </td>
+        <td colspan="2" align="center">
+            Matt Kinzer
+            <br>1989 - 1990
+            <br>1990 Fleer
+        </td>
     </tr>
-    <tr>        <td width="300">
-        <img width="300" src="Images/1987 Topps Autos/709 Kingman.jpeg"></tr>
+    <tr>        <td>
+        <img width="300" src="Images/1987 Topps Autos/709 Kingman.jpeg"></td>
+        <td colspan="2"><img width="600" src="Images/MLB/Kinzer Edwards.jpeg"></td>
+    </tr>
     </table>
 <h1 id="Kr">Kr</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
