--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -201,6 +201,18 @@
     </tr>
 
     </table>
+<h1 id="Ku">Ku</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Jerry Kutzler
+            <br>1990
+            <br>1991 Score
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Kultzler Jerry.jpeg"></td>
+    </tr>
 </table>
 </body>
 </html>
