--- a/Baseball/Baseball_L.htm
+++ b/Baseball/Baseball_L.htm
@@ -203,9 +203,16 @@
             <br>2016 - Present
             <br>2019 Topps
         </td>
+        <td colspan="2" align="center">
+            Randy Lerch
+            <br>1975 - 1986
+            <br>1978 Topps | 1981 Topps
+        </td>
     </tr>
     <tr>
         <td><img width="300" src="Images/MLB/Leclerc Jose.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Lerch Randy 1.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Lerch Randy 2.jpeg"></td>
     </tr>
     </table>
 <h1 id="Li">Li</h1>
@@ -248,6 +255,16 @@
             <img width="300" src="Images/1987 Topps Autos/126 Loynd.jpeg">
         </td>
     
+    </tr>
+    <tr>
+        <td>
+            Mickey Lolich
+            <br>1963 - 1979
+            <br>1965 Topps
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Lolich Mickey.jpeg"></td>
     </tr>
     </table>
 <h1 id="Lu">Lu</h1>
