--- a/Baseball/Baseball_M.htm
+++ b/Baseball/Baseball_M.htm
@@ -189,11 +189,17 @@
             <br>1989 - 2001
             <br>1992 Upper Deck
         </td>
+        <td>
+            Jake McGee
+            <br>2010 - 2022
+            <br>2016 Topps
+        </td>
     </tr>
     <tr>
         <td colspan="2">
             <img width="600" src="Images/MLB/McElroy Chuck.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/McGee Jake.jpeg"></td>
     </tr>
     </table>
 <h1 id="Me">Me</h1>
@@ -314,9 +320,15 @@
                 <br>1988 - 1996
                 <br>1989 Topps
             </td>
+            <td>
+                Kurt Miller
+                <br>1994 - 1999
+                <br>1991 Upper Deck
+            </td>
         </tr>
         <tr>
             <td><img width="300" src="Images/MLB/Milacki Bob.jpeg"></td>
+            <td><img width="300" src="Images/MLB/Miller Kurt.jpeg"></td>
         </tr>
         </table>
 <h1 id="Mo">Mo</h1>
@@ -371,7 +383,7 @@
     <tr>
         <td> 
             Brian Moehler 
-            <br>1996 - 1010
+            <br>1996 - 2010
             <br>1999 Stadium Club
         </td>
         <td>
