--- a/Baseball/Baseball_P.htm
+++ b/Baseball/Baseball_P.htm
@@ -62,6 +62,9 @@
         <br>2010 Upper Deck Signature Sensations
     </td>
     <td>
+        Lance Painter
+        <br>1992 Classic
+        <br>1993 - 2003
     </td>
 </tr>
 <tr>
@@ -72,9 +75,7 @@
         <img width="300" src="Images/MLB/Troy Patton.jpeg">
 
     </td>
-    <td width="300">
-\
-    </td>
+    <td><img width="300" src="Images/MLB/Painter Lance.jpeg"></td>
     </tr>
 </table>
 <h1 id="Pe">Pe</h1>
@@ -144,16 +145,21 @@
     <tr>
         <td>
             Lou Piniella
-            <br>Player: 1964 - 1984
-            <br>Manager: 1986 - 2010
+            <br>Player: 1964 - 1984 | Manager: 1986 - 2010
             <br>Cousin of <a href="Baseball_M.htm"> Dave Magadan</a>
             <br>1987 Topps
+        </td>
+        <td>
+            Ron Piché
+            <br>1960 - 1966
+            <br>1965 Topps
         </td>
     </tr>
     <tr>
         <td width="300">
             <img width="300" src="Images/1987 Topps Autos/168 Piniella.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Piche Ron.jpeg"></td>
     </tr>
 </table>
 <h1 id="Pl">Pl</h1>
@@ -194,6 +200,22 @@
             <img width="300" src="Images/1987 Topps Autos/437 Power.jpeg">
         </td>
 
+    </tr>
+</table>
+<h1 id="Pr">Pr</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+    <tr>
+        <td>
+            Mike Proly
+            <br>1976 - 1983
+            <br>1980 Topps
+        </td>
+
+    </tr>
+    <tr>
+        <td width="300">
+            <img width="300" src="Images/MLB/Proly Mike.jpeg">
+        </td>
     </tr>
 </table>
 <h1 id="Pu">Pu</h1>
