--- a/Baseball/Baseball_S.htm
+++ b/Baseball/Baseball_S.htm
@@ -110,11 +110,24 @@
             <br>1991 - 1995
             <br>1994 Topps
         </td>
+        <td>
+            Joe Sambito
+            <br>1976 - 1987
+            <br>1980 Topps
+        </td>
+        <td>
+            Tony Saundres
+            <br>1997 - 1999
+            <br>1999 Stadium Club
+
+        </td>
     </tr>
     <tr>
         <td>
             <img width="300" src="Images/MLB/Mo Sanford.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Sambito Joe.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Saunders Tony.jpeg"></td>
     </tr>
 </table>
 <h1 id="Sc">Sc</h1>
@@ -169,7 +182,7 @@
             <img width="300" src="Images/1987 Topps Autos/703 Schmidt.jpeg">
         </td>
         <td>
-            <img width="300" src="images/1987 Topps Traded/Dave Schmidt.jpeg">
+            <img width="300" src="Images/1987 Topps Traded/Dave Schmidt.jpeg">
         </td>
         </tr>
         <tr>
@@ -242,6 +255,16 @@
         <td><img width="300" src="Images/MLB/Seminara Frank.jpeg"> </td>
 
     </tr>
+    <tr>
+        <td> <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Carroll Sembera
+            <br>1965 - 1970
+            <br>1969 Topps
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Sembera Carroll.jpeg"></td>
+    </tr>
 </table>
 <h1 id="Sh">Sh</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -285,10 +308,16 @@
             <br>1985 - 1989
             <br>1988 Score
         </td>
+        <td>
+            Don Shaw
+            <br>1967 - 1972
+            <br>1969 Topps
+        </td>
     </tr>
     <tr>
         <td><img width="300" src="Images/MLB/Shaw Jeff.jpeg"></td>
         <td><img width="300" src="Images/MLB/Shields Steve.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Don Shaw.jpeg"></td>
     </tr>
 </table>
 <h1 id="Si">Si</h1>
@@ -541,7 +570,7 @@
         <td>
             Ross Stripling
             <br>2016 - 
-            <br>2026 Topps Holiday
+            <br>2016 Topps Holiday
         </td>
         <td>
             Jackson Stephens
