--- a/Baseball/Baseball_W.htm
+++ b/Baseball/Baseball_W.htm
@@ -80,6 +80,18 @@
     </td>
     <td><img width="300" src="Images/MLB/Ware Jeff.jpeg"></td>
 </tr>
+<tr>
+    <td>
+        Stan Wall
+        <br>1975 - 1977
+        <br>
+    </td>
+</tr>
+<tr>
+    <td>
+        <img width="300" src="Images/MLB/Wall Stan.jpeg">
+    </td>
+</tr>
 </table>
 <h1 id="We">We</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -227,6 +239,7 @@
             <center>
             Todd Worrell
             <br>1984 - 1997
+            <br>Brother of Tim Worrell
             </center>
         </td>
     </tr>
@@ -258,6 +271,10 @@
             <br>1964 Topps 
         </td>
         <td>
+            Tim Worrell
+            <br>1993 - 2006
+            <br>1994 Fleer
+            <br>Brother of Todd Worrell
         </td>
     </tr>
     <tr>
@@ -268,7 +285,7 @@
             <img width="300" src="Images/MLB/Wilbur Wood.jpeg">
         </td>
         <td width="300">
-    
+            <img width="300" src="Images/MLB/Worrell Tim.jpeg">
         </td>
         </tr>
     </table>
