--- a/Baseball/Baseball_T.htm
+++ b/Baseball/Baseball_T.htm
@@ -169,6 +169,16 @@
             <img width="300" src="Images/MLB/Mark Thompson.jpeg">
         </td>
         </tr>
+    <tr>
+        <td>
+            Mark Thompson
+            <br>1994 - 200
+            <br>1997 Score
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Thompson Mark.jpeg"></td>
+    </tr>
     </table>
 <h1 id="Ti">Ti</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
