--- a/Baseball/Baseball_V.htm
+++ b/Baseball/Baseball_V.htm
@@ -62,6 +62,9 @@
         <br>1991 Score
     </td>
     <td>
+        Marc Valdes
+        <br>1995 - 2001
+        <br>1994 Signature Rookies Tetrad
     </td>
 </tr>
 <tr>
@@ -72,7 +75,7 @@
         <img width="300" src="Images/MLB/Todd Van Poppel.jpeg">
     </td>
     <td width="300">
-
+        <img width="300" src="Images/MLB/Valdes Marc.jpeg"
     </td>
     </tr>
 </table>
