--- a/Baseball/Baseball_Z.htm
+++ b/Baseball/Baseball_Z.htm
@@ -31,10 +31,16 @@
             <br>Birmingham Black Barons
             <br>1945-48, 1950-51, 1954
         </td>
+        <td>
+            Pat Zachry
+            <br>1976 - 1985
+            <br>1985 Topps
+        </td>
     </tr>
     <tr>
         <td><img width="300" src="Images/Negro Leagues/Jim Zapp.jpeg"></td>
         <td><img width="300" src="Images/Negro Leagues/Jim Zapp 2.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Zachry Pat.jpeg"></td>
     </tr>
  </table>
  <h1>Zu</h1>
