--- a/Baseball/Baseball_J.htm
+++ b/Baseball/Baseball_J.htm
@@ -104,7 +104,7 @@
         <img src="Images/1987 Topps Autos/267 Johnson.jpeg" width="300">
     </td>
     <td width="300">
-        <img src="images/1987 Topps Autos/377 Johnson.jpeg" width="300">
+        <img src="Images/1987 Topps Autos/377 Johnson.jpeg" width="300">
     </td>
     <td width="300">
         <img src="Images/1987 Topps Autos/543 Johnson.jpeg" width="300">
