--- a/Baseball/Baseball_K.htm
+++ b/Baseball/Baseball_K.htm
@@ -149,7 +149,7 @@
         </td>
 
         </td>
-        <td colspan="3"><img width="600" src="images/MLB/Kiely John.jpeg"></td>
+        <td colspan="3"><img width="600" src="Images/MLB/Kiely John.jpeg"></td>
         </tr>
     <tr>
         <td>
