--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="autographs.html">Autographs</a></li>
-                <li><a href="/bibliograph.html">Links to Books about Crafts and Whatnot</a></li> 
-                <li><a href="/papermodels.html">Links to Paper Models free for the Download</a></a> </li>
+                <li><a href="bibliograph.html">Links to Books about Crafts and Whatnot</a></li> 
+                <li><a href="papermodels.html">Links to Paper Models free for the Download</a></a> </li>
             </ul>
         </nav>
         </nav>
