--- a/Baseball/Baseball_A.htm
+++ b/Baseball/Baseball_A.htm
@@ -106,12 +106,17 @@
         <br>2018-2020
         <br>2019 Topps
     </td>
-    <td></td>
+    <td>
+        Tim Adleman
+        <br>2016 - 2018
+        <br>2017 Honus Bonus Fantasy Baseball
+    </td>
     <td></td>
     <td></td>
 </tr>
 <tr>
     <td><img width="300" src="Images/MLB/Chance Adam.jpeg"></td>
+    <td><img width="300" src="Images/MLB/Adleman Tim.jpeg"></td>
 </tr>
 </table>
 <h1 id="Ak">Ak</h1>
@@ -141,6 +146,11 @@
     <br>1987 - 1990
     <br>1988 Fleer
 </td>
+<td>
+    Bob Allietta
+    <br>1975
+    <br>1976 Topps
+</td>
 </tr>
 <tr>
     <td width="300">
@@ -149,6 +159,7 @@
     <td>
         <img src="Images/MLB/Aldrich Jay.jpeg" width="300">
     </td>
+    <td><img src="Images/MLB/Allietta Bob.jpeg" width="300"></td>
 </tr>
 </table>
 <h1 id="An">An</h1>
@@ -200,7 +211,7 @@
         <td>
             Chase Anderson
             <br>2014 - 
-            <br>2018 Topps
+            <br>2019 Topps
         </td>
     </tr>
     <tr>
@@ -243,6 +254,19 @@
     <td width="300"><img src="Images/1987 Topps Autos/052 Atherton.jpeg" width="300"> </td>
     <td><img width="300" src="Images/Negro Leagues/Luke Atkinson.jpeg"> </td>
     </tr>
+    </table>
+    <h1 id="Au">Au</h1>
+    <table align="center" border="1" cellpadding="5" cellspacing="5">
+        <tr>
+            <td>Brad Ausmus
+                <br>1993 - 2010
+                <br>1999 Topps Chrome
+            </td>
+
+        </tr>
+        <tr>
+            <td><img width="300" src="Images/MLB/Ausmus Brad.jpeg"></td>
+        </tr>
     </table>
     <h1 id="Av">Av</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
