--- a/Baseball/Baseball_B.htm
+++ b/Baseball/Baseball_B.htm
@@ -112,11 +112,17 @@
         <br>2009 - 2023
         <br>2013 Topps Update
     </td>
+    <td>
+        Shawn Barton
+        <br>1992 - 1996
+        <br>1993 Topps
+    </td>
 </tr>
 <tr>
     <td>
         <img width="300" src="Images/MLB/Bard Daniel.jpeg">
     </td>
+    <td><img width="300" src="Images/MLB/Barton Shawn.jpeg"></td>
 </tr>
 </table>
 <h1>Be</h1>
@@ -206,12 +212,30 @@
         <br>1958 - 1969
         <br>1969 Topps
         </td>
+        <td colspan="2" align="center">
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            Joan Berger
+            <br>AAGPBL
+            <br>Rockford Peaches 1951 - 1954
+        </td>
     </tr>
     <tr>
         <td>
             <img src="Images/MLB/Bell Gus.jpeg" width="300">
         </td>
+        <td colspan="2" align="center"><img src="Images/AAGPBL/Berger Joan.jpeg" width=600></td>
     </tr>
+    <tr>
+        <td>
+            Andy Benes
+            <br>1989 - 2002
+            <br>1991 Upper Deck
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Benes Andy.jpeg"></td>
+    </tr>
+
     </table>
 <h1>Bi</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
@@ -268,12 +292,18 @@
             <br>1985 - 1990
             <br>1989 Topps | 1991 Topps
         </td>
+        <td>
+            Jack Billingham
+            <br>1968 - 1979
+            <br>1969 Topps
+        </td>
     </tr>
     <tr>
         <td>
             <img src="Images/MLB/Birtsas Tim.jpeg" width="300">
         </td>
         <td><img width="300" src="Images/MLB/Birtsas Tim 1.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Billingham Jack.jpeg"></td>
     </tr>
     </table>
 <h1>Bl</h1>
@@ -440,13 +470,18 @@
     <tr>
         <td>
             Lisalverto Bonilla
-            <br>MLB: 2014, 1017
-            <br>CPBL:2020-2021
+            <br>MLB: 2014, 2017 | CPBL:2020-2021
             <br>2013 Topps Pro Debut
         </td> 
+        <td>
+            John Boccabella
+            <br>1963 - 1974
+            <br>1969 Topps
+        </td>
     </tr>
     <tr>
         <td><img width="300" src="Images/MLB/Bonilla Lisalverto.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Boccabella John.jpeg"></td>
     </tr>
     </table>
 <h1>Br</h1>
@@ -538,9 +573,15 @@
             <br>1966 - 1973
             <br>1969 Topps
         </td>
+        <td>
+            Ron Brand
+            <br>1963, 1965-1971
+            <br>1969 Topps
+        </td>
     </tr>
     <tr>
         <td><img width="300" src="Images/MLB/Brandon Darrell.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Brand Ron.jpeg"></td>
     </tr>
     </table>
 <h1>Bu</h1>
@@ -591,7 +632,7 @@
         <td width="300"><img src="Images/1987 Topps Autos/764 Buckner.jpeg" width="300"></td>
     </tr>
     <tr>
-        <td>
+        <td colspan="2" align="center">
             Jim Bullinger
             <br>1992 - 1998
             <br>1997 Collectors Choice
@@ -599,6 +640,7 @@
     </tr>
     <tr>
         <td><img width="300" src="Images/MLB/Bullinger Jim.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Bullinger Jim 1.jpeg"></td>
     </tr>
     </table>
 
