--- a/Baseball/Baseball_C.htm
+++ b/Baseball/Baseball_C.htm
@@ -213,6 +213,22 @@
             <img width="300" src="Images/MLB/Cornellius Reid.jpeg">
         </td>
     </tr>
+    <tr>
+        <td>
+            Pat Coombs
+            <br>1989 - 1992
+            <br>1990 Donruss
+        </td>
+        <td>
+            Chris Coste
+            <br>2006 - 2009
+            <br>2007 Upper Deck
+        </td>
+    </tr>
+    <tr>
+        <td><img width="300" src="Images/MLB/Combs Pat.jpeg"></td>
+        <td><img width="300" src="Images/MLB/Coste Chris.jpeg"></td>
+    </tr>
     </table>
     <h1>Cr</h1>
     <table align="center" border="1" cellpadding="5" cellspacing="5">
