--- a/Baseball/Baseball_D.htm
+++ b/Baseball/Baseball_D.htm
@@ -151,6 +151,11 @@
             <br>1990 - 1996
             <br>1991 Score
         </td>
+        <td>
+            Steve Decker
+            <br>1990 - 1999
+            <br>1992 Topps
+        </td>
     </tr>
     <tr>
         <td>
@@ -159,6 +164,7 @@
         <td>
             <img width="300" src="Images/MLB/Mark Dewey.jpeg">
         </td>
+        <td><img width="300" src="Images/MLB/Decker Steve.jpeg"></td>
     </tr>
     <tr>
         <td colspan="300" align="center">Manny Delcarmen<br>2005 - 2010<br>	2005 Just Stars | 	2005 Just Autographs</td>
