--- a/Baseball/Baseball_E.htm
+++ b/Baseball/Baseball_E.htm
@@ -64,6 +64,20 @@
 <td width="300"><img src="Images/1987 Topps Autos/371 Eichorn.jpeg" width="300"> </td>
 </tr>
 </table>
+<h1 id="El">El</h1>
+<table align="center" border="1" cellpadding="5" cellspacing="5">
+<tr>
+<td>
+    Donnie Elliott
+    <br>1994-1995
+    <br>1994 Collectors Choice
+</td>
+
+</tr>
+<tr>
+<td width="300"><img src="Images/MLB/Elliott Donnie.jpeg" width="300"> </td>
+</tr>
+</table>
 <h1 id="Er">Er</h1>
 <table align="center" border="1" cellpadding="5" cellspacing="5">
 <tr>
