--- a/Baseball/Baseball_Y.htm
+++ b/Baseball/Baseball_Y.htm
@@ -25,7 +25,43 @@
  </pre>
  <h1 id="Ya">Ya</h1>
  <table align="center" border="1" cellpadding="5" cellspacing="5">
- <tr>
+    <tr>
+        <td colspan="3" align="center">
+            <img width="50" align="right" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJpZmU4ZnpzZncxejlkenhsemJidmFrcDh2azRrNXhtaTExYzhiNSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/fi9iBFsZXieAg/giphy.gif">
+            George Yankowski<br>
+        </td>
+        </tr>
+     <tr>
+        <td align="center">
+            US Army World War II<br>
+            Custom Cards<br>
+            1942 - 1946
+        </td>
+        <td  colspan="2" align="center">
+            <table>
+                <tr>
+                    <td colspan="3">
+                    <img width=300 align="center" src="../Assets/Combat_Infantry_Badge.svg.png"><br>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center">
+                    <img width="100" align="center" src="../Assets/Bronze_Star_Medal_ribbon.svg.png"><img width="100" align="center" src="../Assets/World_War_II_Victory_Medal_ribbon.svg.png">
+                   
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <img width="600" src="Images/MLB/Yankowski George.jpeg">
+        </td>
+        <td>
+            <img width="300" src="Images/MLB/Yankowski George 1.jpeg">
+        </td>
+    </tr>
+    <tr>
      <td>
          Ryan Yarbrough
          <br>2018 - Present
